--- a/docker/server-cluster.yaml
+++ b/docker/server-cluster.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - '8080:80'
     volumes:
-      - ../nginx-default.conf:/etc/nginx/conf.d/default.conf
+      - ../data/nginx-default.conf:/etc/nginx/conf.d/default.conf
       - ostreedata:/opt/repo
 
   sshd:
